[platform] cleanup RenameHandlerRegistry: replace get(0) with getFirst()
Also reformat the whole file.

GitOrigin-RevId: a409a04353ed255a701d7ab7def1edefd4c6a514