@@ -38,7 +38,8 @@ import java.util.stream.Collectors;
 public class RenameHandlerRegistry {
   public static final Key<Boolean> SELECT_ALL = Key.create("rename.selectAll");
   private final PsiElementRenameHandler myDefaultElementRenameHandler;
-  private Function<? super Collection<? extends RenameHandler>, ? extends RenameHandler> myRenameHandlerSelectorInTests = ContainerUtil::getFirstItem;
+  private Function<? super Collection<? extends RenameHandler>, ? extends RenameHandler> myRenameHandlerSelectorInTests =
+    ContainerUtil::getFirstItem;
 
   public static RenameHandlerRegistry getInstance() {
     return ApplicationManager.getApplication().getService(RenameHandlerRegistry.class);
@@ -62,7 +63,7 @@ public class RenameHandlerRegistry {
       return null;
     }
     else if (availableHandlers.size() == 1) {
-      return availableHandlers.get(0);
+      return availableHandlers.getFirst();
     }
     else if (ApplicationManager.getApplication().isUnitTestMode()) {
       return myRenameHandlerSelectorInTests.apply(availableHandlers);
@@ -113,7 +114,8 @@ public class RenameHandlerRegistry {
   }
 
   @TestOnly
-  public void setRenameHandlerSelectorInTests(Function<? super Collection<? extends RenameHandler>, ? extends RenameHandler> selector, Disposable parentDisposable) {
+  public void setRenameHandlerSelectorInTests(Function<? super Collection<? extends RenameHandler>, ? extends RenameHandler> selector,
+                                              Disposable parentDisposable) {
     myRenameHandlerSelectorInTests = selector;
     Disposer.register(parentDisposable, new Disposable() {
       @Override
@@ -136,7 +138,7 @@ public class RenameHandlerRegistry {
     private String mySelection;
     private final JRadioButton[] myRButtons;
 
-    protected HandlersChooser(Project project, @NlsContexts.RadioButton String [] renamers) {
+    protected HandlersChooser(Project project, @NlsContexts.RadioButton String[] renamers) {
       super(project);
       myRenamers = renamers;
       myRButtons = new JRadioButton[myRenamers.length];
